# Programetes

./: ConsoleApp1.sln  Joc endevinar.py  Llegir.py  Politges.py  Profe.py  README.md  app.py  app2.py  bonic.py  contrassenya.py  contrassenya1.txt  fps.py  frases.py  jejeje1.txt  joc.py  main.py  programeta.py  prova temps.py  temperatura.py  tkinterer.py  traductorxd.py
C/: caca  caca.c  calculadora  calculadora.c  comparar  compare  compare.c  main  main.c  nom  nom.c  notes  notes.c  test  test.c
C++/: CMakeLists.txt  bondia  bondia.cpp  bondia.s  calcu  calcu.cpp  calcu.s  calcu2.cpp  contrassenya  contrassenya.cpp  contrassenya2  conversor-graus  conversor-graus.cpp  counter.cpp  crack  cracker.cpp  cracker_fast  cracker_fast.cpp  funcions  funcions.cpp  hello.cpp  numeret  numeret.cpp  numeret.h  pilila  pilila.cpp  rock-paper-scissors  rock-paper-scissors.cpp  rock-paper-scissors.h  saludar  saludar.cpp  temps.cpp  xuletaxd  xuletaxd.cpp
C++/Course/: arithmetic_operators  arithmetic_operators.cpp  break-continue.cpp  constants.cpp  do-while-loops.cpp  for-loops.cpp  helloworld.cpp  if-statements.cpp  logical-operators.cpp  math-functions.cpp  namespace.cpp  nested-loops.cpp  string-methods.cpp  switches.cpp  switches2.cpp  ternary-operator.cpp  type-conversion.cpp  typedef.cpp  user-input.cpp  variables  variables.cpp  while-loops.cpp
C++/Course/Projects/: calculator.cpp  hypotenuse-calculator.cpp  random-event-generator.cpp  random-number-generator.cpp  temperature-conversion.cpp
C++/Qt/Test/: mainwindow.ui
Python/: Joc endevinar.py  Politges.py  chat.py  (+8 more)
(+33 files in other folders)
